// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyButton match snapshot 1`] = `
Array [
  Object {
    "payload": "_MY_PAYLOAD_",
    "payment_summary": Object {
      "currency": "USD",
      "is_test_payment": true,
      "merchant_name": "My Fake Business",
      "payment_type": "FIXED_AMOUNT",
      "price_list": Array [
        Object {
          "amount": "12.75",
          "label": "subtotal",
        },
      ],
      "requested_user_info": Array [
        "shipping_address",
        "contact_name",
        "contact_phone",
        "contact_email",
      ],
    },
    "title": "my button",
    "type": "payment",
  },
]
`;

exports[`CallButton match snapshot 1`] = `
Array [
  Object {
    "number": "+15105551234",
    "title": "call me maybe",
    "type": "phone_number",
  },
]
`;

exports[`GamePlayButton match snapshot 1`] = `
Array [
  Object {
    "game_metadata": Object {
      "context_id": "SAW",
      "player_id": "Adam",
    },
    "payload": "GAME_OVER",
    "title": "I want to play a game",
    "type": "game_play",
  },
]
`;

exports[`LoginButton match snapshot 1`] = `
Array [
  Object {
    "type": "account_link",
    "url": "https://council.elrond",
  },
]
`;

exports[`LoginButton match snapshot 2`] = `
Array [
  Object {
    "type": "account_link",
    "url": "https://council.elrond",
  },
]
`;

exports[`LogoutButton match snapshot 1`] = `
Array [
  Object {
    "type": "account_unlink",
  },
]
`;

exports[`PostbackButton match snapshot 1`] = `
Array [
  Object {
    "payload": "_MY_PAYLOAD_",
    "title": "my button",
    "type": "postback",
  },
]
`;

exports[`ShareButton match snapshot 1`] = `
Array [
  Array [
    Object {
      "share_contents": undefined,
      "type": "element_share",
    },
  ],
  Array [
    Object {
      "share_contents": "__RENDERED_GENERIC_TEMPLATE_MEASSGE_OBJ__",
      "type": "element_share",
    },
  ],
]
`;

exports[`URLButton match snapshot 1`] = `
Array [
  Array [
    Object {
      "fallback_url": undefined,
      "messenger_extensions": undefined,
      "title": "my button",
      "type": "web_url",
      "url": "http://machinat.com",
      "webview_height_ratio": undefined,
      "webview_share_button": undefined,
    },
  ],
  Array [
    Object {
      "fallback_url": "http://...",
      "messenger_extensions": true,
      "title": "my button",
      "type": "web_url",
      "url": "http://machinat.com",
      "webview_height_ratio": "compact",
      "webview_share_button": "hide",
    },
  ],
]
`;
